--- a/asgn0/asg0.html
+++ b/asgn0/asg0.html
@@ -58,7 +58,7 @@
     <input name="Scalar" type="text" id="sc" size="10">
 
     <br><br>
-    <input type="button" value="Draw" onclick=handleOpEvent()></input>
+    <input type="button" value="Draw" onclick=handleDrawOperationEvent()></input>
 
   </body>
 </html>
