--- a/asgn0/asg0.html
+++ b/asgn0/asg0.html
@@ -1,3 +1,11 @@
+<!--
+Arjun Krishnan
+akrish29@ucsc.edu
+
+Notes to Grader:
+N/A. Have a great day!
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
