--- a/asgn1/HelloPoint1.html
+++ b/asgn1/HelloPoint1.html
@@ -11,19 +11,31 @@
     </canvas>
 
     <p></p>
+    <input type="button" value="Clear Canvas" id="clearButton" onclick="clearCanvas()">
+
+    <p></p>
+    Drawing Mode:
+    <p></p>
+    <input type="button" value="Square" id="pointButton">
+    <input type="button" value="Triangle" id="triangleButton">
+    <input type="button" value="Circle" id="circleButton">
+
+    <p></p>
+    Shape Color:
+    <p></p>
     Red: <input type="range" id="redSlider" name="red" min="0" max="100" step="0.01" value="0"/>
-    <p></p>
     Green: <input type="range" id="greenSlider" name="green" min="0" max="100" step="0.01" value="0"/>
-    <p></p>
     Blue: <input type="range" id="blueSlider" name="blue" min="0" max="100" step="0.01" value="0"/>
     <p></p>
-    Size: <input type="range" id="sizeSlider" name="size" min="1" max="15" step="1" value="1"/>
-    <p></p>
-    <input type="button" value="Clear" id="clearButton" onclick="clearCanvas()">
+    Shape Size: <input type="range" id="sizeSlider" name="size" min="5" max="40" step="1" value="1"/>
+    (Circles) Segment Count: <input type="range" id="segmentSlider" name="segment" min="3" max="16" step="1" value="6"/>
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
     <script src="HelloPoint1.js"></script>
+    <script src="Point.js"></script>
+    <script src="Triangle.js"></script>
+    <script src="Circle.js"></script>
   </body>
 </html>
