--- a/asgn1/asg1.html
+++ b/asgn1/asg1.html
@@ -6,9 +6,10 @@
   </head>
 
   <body onload="main()">
-    <canvas id="webgl" width="400" height="400">
+    <canvas id="webgl" width="400" height="533">
     Please use a browser that supports "canvas"
     </canvas>
+    <img src="bird.jpg" width="400">
 
     <p></p>
     <input type="button" value="Clear Canvas" id="clearButton" onclick="clearCanvas()">
@@ -33,9 +34,10 @@
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
-    <script src="HelloPoint1.js"></script>
+    <script src="asg1.js"></script>
     <script src="Point.js"></script>
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
+    <script src="Bird.js"></script>
   </body>
 </html>
