--- a/asgn1/asg1.html
+++ b/asgn1/asg1.html
@@ -22,6 +22,11 @@
     <input type="button" value="Circle" id="circleButton">
 
     <p></p>
+    Draw Image:
+    <p></p>
+    <input type="button" value="Bird" id="birdButton">
+
+    <p></p>
     Shape Color:
     <p></p>
     Red: <input type="range" id="redSlider" name="red" min="0" max="100" step="0.01" value="0"/>
