--- a/asgn1/asg1.html
+++ b/asgn1/asg1.html
@@ -38,6 +38,19 @@
     Shape Size: <input type="range" id="sizeSlider" name="size" min="5" max="40" step="1" value="8"/>
     (Circles) Segment Count: <input type="range" id="segmentSlider" name="segment" min="3" max="16" step="1" value="6"/>
 
+    <p></p>
+    For my drawing, I found an image of a bird spreading its wings that I really liked. I liked the motion and composition of the pose.
+    <p></p>
+    I drew the bird on a piece of graph paper, gave it cooridinates, and transferred the vertices into triangles that I drew in the program.
+    You can press the button titled "DRAW A BIRD" see the bird
+
+    <p></p>
+    As much as I like drawing, I like video games more. I'm not really good at them, but I'm trying to get better, so I added an aim trainer program.
+    To play the aim trainer, press the "TRAIN MY AIM" button. This is my "awesomeness" feature.
+    <p></p>
+    The aim trainer spawns 3 targets at a time, that get removed when you click on them.
+    I painted a gun that follows your mouse, a crosshair to show where you are aiming, and a VERY REALISTIC muzzle flash to make the whole experiene more immersive.
+
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
