--- a/asgn1/asg1.html
+++ b/asgn1/asg1.html
@@ -1,3 +1,11 @@
+<!--
+Arjun Krishnan
+akrish29@ucsc.edu
+
+Notes to Grader:
+my submission's special features are notes in the <p> tags below the canvas. I hope you enjoy my project!
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
