--- a/asgn1/asg1.html
+++ b/asgn1/asg1.html
@@ -47,7 +47,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     (Circles) Segment Count: <input type="range" id="segmentSlider" name="segment" min="3" max="16" step="1" value="6"/>
 
     <p></p>
-    For my drawing, I found an image of a bird spreading its wings that I really liked. I liked the motion and composition of the pose.
+    For my drawing, I found an image of a Roseate Spoonbill spreading its wings. I liked the motion and composition of the pose.
     <p></p>
     I drew the bird on a piece of graph paper, gave it cooridinates, and transferred the vertices into triangles that I drew in the program.
     You can press the button titled "DRAW A BIRD" see the bird. This is my "drawing".
