--- a/asgn1/asg1.html
+++ b/asgn1/asg1.html
@@ -10,7 +10,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Draw a point (1)</title>
+    <title>Drawing Application</title>
   </head>
 
   <body onload="main()">
