--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -14,14 +14,14 @@ my submission's special features are notes in the <p> tags below the canvas. I h
   </head>
 
   <body onload="main()">
-    <canvas id="webgl" width="500" height="500">
+    <canvas id="webgl" width="1000" height="720">
     Please use a browser that supports "canvas"
     </canvas>
+    <img width="800" src="bird.png">
 
     <p id="output"></p>
 
     <p></p>
-    Magenta Joint: <input type="range" id="yellowSlider" name="size" min="-45" max="45" step="0.1" value="-5"/>
     Camera Angle: <input type="range" id="angleSlider" name="size" min="0" max="360" step="0.1" value="0"/>
 
     <p></p>
@@ -36,5 +36,6 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="BlockyAnimal.js"></script>
     <script src="Triangle.js"></script>
     <script src="Cube.js"></script>
+    <script src="Vulture.js"></script>
   </body>
 </html>
