--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -22,6 +22,13 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <p id="output"></p>
 
     <p></p>
+    Head Angle: <input type="range" id="headSlider" name="size" min="-45" max="45" step="0.1" value="0"/>
+    <p></p>
+    Top Beak Angle: <input type="range" id="topBeakSlider" name="size" min="-6" max="14" step="0.1" value="14"/>
+    Bottom Beak Angle: <input type="range" id="bottomBeakSlider" name="size" min="14" max="30" step="0.1" value="10"/>
+
+    <p></p>
+    Wing Angle: <input type="range" id="wingSlider" name="size" min="20" max="80" step="0.1" value="80"/>
     Camera Angle: <input type="range" id="angleSlider" name="size" min="0" max="360" step="0.1" value="0"/>
 
     <p></p>
