more bird progress - feather stages

--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -17,7 +17,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <canvas id="webgl" width="1000" height="720">
     Please use a browser that supports "canvas"
     </canvas>
-    <img width="800" src="bird.png">
+    <img width="800" src="bird2.jpg">
 
     <p id="output"></p>
 
@@ -28,9 +28,11 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Bottom Beak Angle: <input type="range" id="bottomBeakSlider" name="size" min="10" max="30" step="0.1" value="10"/>
 
     <p></p>
-    Wing Angle: <input type="range" id="wingSlider" name="size" min="20" max="80" step="0.1" value="80"/>
+    Wing Angle: <input type="range" id="wingSlider" name="size" min="0" max="70" step="0.1" value="0"/>
     Wing 2 Angle: <input type="range" id="elbowSlider" name="size" min="-165" max="-50" step="0.1" value="-165"/>
     Wing 3 Angle: <input type="range" id="handSlider" name="size" min="50" max="170" step="0.1" value="80"/>
+
+    <p></p>
     Camera Angle: <input type="range" id="angleSlider" name="size" min="0" max="360" step="0.1" value="0"/>
 
     <p></p>
