wing and tail done

--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -22,15 +22,26 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <p id="output"></p>
 
     <p></p>
-    Head Angle: <input type="range" id="headSlider" name="size" min="-45" max="45" step="0.1" value="0"/>
+    Head Angle X: <input type="range" id="headSlider" name="size" min="135" max="225" step="0.1" value="180"/>
+    Head Angle Y: <input type="range" id="headYSlider" name="size" min="-25" max="19.2" step="0.1" value="19.2"/>
     <p></p>
     Top Beak Angle: <input type="range" id="topBeakSlider" name="size" min="-6" max="14" step="0.1" value="14"/>
     Bottom Beak Angle: <input type="range" id="bottomBeakSlider" name="size" min="10" max="30" step="0.1" value="10"/>
 
     <p></p>
-    Wing Angle: <input type="range" id="wingSlider" name="size" min="0" max="70" step="0.1" value="0"/>
+    Wing Angle: <input type="range" id="wingSlider" name="size" min="0" max="70" step="0.1" value="70"/>
+    Secondary Wing Angle: <input type="range" id="wingFrontBackSlider" name="size" min="-50" max="50" step="0.1" value="0"/>
+
+    <p></p>
+    Tail Angle: <input type="range" id="tailSlider" name="size" min="0" max="10" step="0.1" value="0"/>
+
+    <p></p>
     Wing 2 Angle: <input type="range" id="elbowSlider" name="size" min="-165" max="-50" step="0.1" value="-165"/>
     Wing 3 Angle: <input type="range" id="handSlider" name="size" min="50" max="170" step="0.1" value="80"/>
+
+    <p></p>
+    Leg Angle: <input type="range" id="legSlider" name="size" min="-110" max="-30" step="0.1" value="-90"/>
+    Leg Secondary Angle: <input type="range" id="shinSlider" name="size" min="-20" max="0" step="0.1" value="-20"/>
 
     <p></p>
     Camera Angle: <input type="range" id="angleSlider" name="size" min="0" max="360" step="0.1" value="0"/>
