--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -42,6 +42,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <p></p>
     Leg Angle: <input type="range" id="legSlider" name="size" min="-110" max="-30" step="0.1" value="-90"/>
     Leg Secondary Angle: <input type="range" id="shinSlider" name="size" min="-20" max="0" step="0.1" value="-20"/>
+    Toe Angle: <input type="range" id="toeSlider" name="size" min="-1.5" max="20" step="0.1" value="-1.5"/>
 
     <p></p>
     Camera Angle: <input type="range" id="angleSlider" name="size" min="0" max="360" step="0.1" value="0"/>
