--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -40,9 +40,20 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Wing 3 Angle: <input type="range" id="handSlider" name="size" min="50" max="170" step="0.1" value="80"/>
 
     <p></p>
-    Leg Angle: <input type="range" id="legSlider" name="size" min="-110" max="-30" step="0.1" value="-90"/>
-    Leg Secondary Angle: <input type="range" id="shinSlider" name="size" min="-20" max="0" step="0.1" value="-20"/>
-    Toe Angle: <input type="range" id="toeSlider" name="size" min="-1.5" max="20" step="0.1" value="-1.5"/>
+    Right Leg Angle X: <input type="range" id="rightLegXSlider" name="size" min="-110" max="-30" step="0.1" value="-90"/>
+    Right Leg Angle Y: <input type="range" id="rightLegYSlider" name="size" min="-3" max="-6" step="0.1" value="-3"/>
+    Right Shin Angle X: <input type="range" id="rightShinXSlider" name="size" min="-50" max="50" step="0.1" value="0"/>
+    Right Shin Angle Y: <input type="range" id="rightShinYSlider" name="size" min="-50" max="50" step="0.1" value="0"/>
+    Right Foot Angle: <input type="range" id="rightFootAngle" name="size" min="-50" max="50" step="0.1" value="0"/>
+    Right Toe Angle: <input type="range" id="rightToeSlider" name="size" min="-1.5" max="20" step="0.1" value="0"/>
+
+    <p></p>
+    Left Leg Angle X: <input type="range" id="leftLegXSlider" name="size" min="-110" max="-30" step="0.1" value="-90"/>
+    Left Leg Angle Y: <input type="range" id="leftLegYSlider" name="size" min="3" max="6" step="0.1" value="3"/>
+    Left Shin Angle X: <input type="range" id="leftShinXSlider" name="size" min="-50" max="50" step="0.1" value="0"/>
+    Left Shin Angle Y: <input type="range" id="leftShinYSlider" name="size" min="-50" max="50" step="0.1" value="0"/>
+    Left Foot Angle: <input type="range" id="leftFootAngle" name="size" min="-50" max="50" step="0.1" value="0"/>
+    Left Toe Angle: <input type="range" id="leftToeSlider" name="size" min="-1.5" max="20" step="0.1" value="0"/>
 
     <p></p>
     Camera Angle: <input type="range" id="angleSlider" name="size" min="0" max="360" step="0.1" value="0"/>
