basic area setup

--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -17,7 +17,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <canvas id="webgl" width="1000" height="720">
     Please use a browser that supports "canvas"
     </canvas>
-    <img width="800" src="bird.png">
+    <img width="500" src="bird.png">
 
     <p id="output"></p>
 
@@ -70,6 +70,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="BlockyAnimal.js"></script>
     <script src="Triangle.js"></script>
     <script src="Cube.js"></script>
+    <script src="Area.js"></script>
     <script src="Vulture.js"></script>
   </body>
 </html>
