--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -46,8 +46,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Tail Angle: <input type="range" id="tailSlider" min="0" max="10" step="0.1" value="0"/>
 
     <p></p>
-    Wing 2 Angle: <input type="range" id="elbowSlider" min="-165" max="-50" step="0.1" value="-165"/>
-    Wing 3 Angle: <input type="range" id="handSlider" min="50" max="170" step="0.1" value="80"/>
+    Wing 2 Angle: <input type="range" id="handXSlider" min="-60" max="0" step="0.1" value="-40"/>
 
     <p></p>
     Right Leg Angle X: <input type="range" id="rightLegXSlider" min="-110" max="-30" step="0.1" value="-90"/>
