animation done, separated as well

--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -13,7 +13,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <title>Drawing Application</title>
   </head>
 
-  <body onload="main()">
+  <body onload="main()" style="background-color: black;">
     <canvas id="webgl" width="1000" height="720">
     Please use a browser that supports "canvas"
     </canvas>
@@ -81,5 +81,6 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="Cube.js"></script>
     <script src="Area.js"></script>
     <script src="Vulture.js"></script>
+    <script src="FlyUpAnimClips.js"></script>
   </body>
 </html>
