--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -13,7 +13,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <title>Drawing Application</title>
   </head>
 
-  <body onload="main()" style="">
+  <body onload="main()">
     <canvas id="webgl" width="1000" height="720">
     Please use a browser that supports "canvas"
     </canvas>
