--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -82,6 +82,8 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="Area.js"></script>
     <script src="Vulture.js"></script>
     <script src="FlyUpAnimClips.js"></script>
+    <script src="FlyDownAnimClips.js"></script>
     <script src="Turnaround.js"></script>
+    <script src="TurnaroundStart.js"></script>
   </body>
 </html>
