fixed wings, added color, added face decor, functionized anims

--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -13,46 +13,42 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <title>Drawing Application</title>
   </head>
 
-  <body onload="main()">
-    <canvas id="webgl" width="1000" height="720">
+  <body onload="main()" style="color: white; background-color: black;">
+    <canvas id="webgl" style="padding: 0; margin: auto auto; align-self: center; display: block" width="1920" height="800">
     Please use a browser that supports "canvas"
     </canvas>
-    <img width="500" src="bird.png">
 
-    <p id="output"></p>
+    <p id="output">
+      <input type="button" id="start" value="PAUSE"/> 
+    </p>
 
     <p></p>
     Body Position X: <input type="range" id="bodyXSlider" min="-20" max="20" step="0.1" value="0"/>
     Body Position Y: <input type="range" id="bodyYSlider" min="-70" max="70" step="0.1" value="0"/>
     Body Position Z: <input type="range" id="bodyZSlider" min="-70" max="70" step="0.1" value="0"/>
 
-    <p></p>
-    Body Angle X: <input type="range" id="bodyAngleXSlider" min="-180" max="180" step="0.1" value="0"/>
-    Body Angle Y: <input type="range" id="bodyAngleYSlider" min="-180" max="180" step="0.1" value="0"/>
-    Body Angle Z: <input type="range" id="bodyAngleZSlider" min="-180" max="180" step="0.1" value="0"/>
+    Body Angle X: <input type="range" id="bodyAngleXSlider" min="-180" max="180" step="1" value="25.836"/>
+    Body Angle Y: <input type="range" id="bodyAngleYSlider" min="-180" max="180" step="1" value="170"/>
+    Body Angle Z: <input type="range" id="bodyAngleZSlider" min="-180" max="180" step="1" value="59.5"/>
 
     <p></p>
     Head Angle X: <input type="range" id="headSlider" min="135" max="225" step="0.1" value="180"/>
     Head Angle Y: <input type="range" id="headYSlider" min="-25" max="19.2" step="0.1" value="19.2"/>
-    <p></p>
-    Top Beak Angle: <input type="range" id="topBeakSlider" min="-6" max="14" step="0.1" value="14"/>
-    Bottom Beak Angle: <input type="range" id="bottomBeakSlider" min="10" max="30" step="0.1" value="10"/>
+    Top Beak Angle: <input type="range" id="topBeakSlider" min="0" max="15" step="1" value="0"/>
+    Bottom Beak Angle: <input type="range" id="bottomBeakSlider" min="0" max="30" step="1" value="0"/>
 
     <p></p>
-    Wing Angle: <input type="range" id="wingSlider" min="0" max="70" step="0.1" value="70"/>
-    Secondary Wing Angle: <input type="range" id="wingFrontBackSlider" min="-50" max="50" step="0.1" value="0"/>
+    Wing Stretch: <input type="range" id="wingSlider" min="0" max="70" step="0.1" value="70"/>
+    Wing Pitch: <input type="range" id="wingFrontBackSlider" min="-50" max="50" step="0.1" value="0"/>
+    Wing Yaw: <input type="range" id="handXSlider" min="-60" max="0" step="0.1" value="-40"/>
 
     <p></p>
-    Tail Angle: <input type="range" id="tailSlider" min="0" max="10" step="0.1" value="0"/>
-
-    <p></p>
-    Wing 2 Angle: <input type="range" id="handXSlider" min="-60" max="0" step="0.1" value="-40"/>
+    Tail Spread: <input type="range" id="tailSlider" min="0" max="10" step="0.1" value="0"/>
 
     <p></p>
     Right Leg Angle X: <input type="range" id="rightLegXSlider" min="-110" max="-30" step="0.1" value="-90"/>
     Right Leg Angle Y: <input type="range" id="rightLegYSlider" min="-3" max="-6" step="0.1" value="-3"/>
     Right Shin Angle X: <input type="range" id="rightShinXSlider" min="-90" max="90" step="0.1" value="0"/>
-    Right Shin Angle Y: <input type="range" id="rightShinYSlider" min="-50" max="50" step="0.1" value="0"/>
     Right Foot Angle: <input type="range" id="rightFootAngle" min="-50" max="50" step="0.1" value="0"/>
     Right Toe Angle: <input type="range" id="rightToeSlider" min="-1.5" max="20" step="0.1" value="0"/>
 
@@ -60,12 +56,8 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Left Leg Angle X: <input type="range" id="leftLegXSlider" min="-110" max="-30" step="0.1" value="-90"/>
     Left Leg Angle Y: <input type="range" id="leftLegYSlider" min="3" max="6" step="0.1" value="3"/>
     Left Shin Angle X: <input type="range" id="leftShinXSlider" min="-90" max="90" step="0.1" value="0"/>
-    Left Shin Angle Y: <input type="range" id="leftShinYSlider" min="-50" max="50" step="0.1" value="0"/>
     Left Foot Angle: <input type="range" id="leftFootAngle" min="-50" max="50" step="0.1" value="0"/>
     Left Toe Angle: <input type="range" id="leftToeSlider" min="-1.5" max="20" step="0.1" value="0"/>
-
-    <p></p>
-    Camera Angle: <input type="range" id="angleSlider" min="0" max="360" step="0.1" value="0"/>
 
     <p></p>
     Animation:
