--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -18,51 +18,49 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Please use a browser that supports "canvas"
     </canvas>
 
-    <p id="output">
-      <input type="button" id="start" value="PAUSE"/> 
-    </p>
-
+    <p id="output"></p>
     <p></p>
-    Body Position X: <input type="range" id="bodyXSlider" min="-20" max="20" step="0.1" value="0"/>
-    Body Position Y: <input type="range" id="bodyYSlider" min="-70" max="70" step="0.1" value="0"/>
-    Body Position Z: <input type="range" id="bodyZSlider" min="-70" max="70" step="0.1" value="0"/>
+    <input type="button" id="pauseButton" value="PAUSE"/> 
+    <input type="button" id="resumeButton" value="UNPAUSE"/> 
+    <input type="button" id="focusButton" value="FOCUS CAMERA"/> 
+    <input type="button" id="centerButton" value="CENTER CAMERA"/> 
+    <p></p>
+
+    <!-- <p></p>
+    Body Position X: <input type="range" id="bodyXSlider" min="-20" max="20" step="1" value="0"/>
+    Body Position Y: <input type="range" id="bodyYSlider" min="-70" max="70" step="1" value="0"/>
+    Body Position Z: <input type="range" id="bodyZSlider" min="-70" max="70" step="1" value="0"/>
 
     Body Angle X: <input type="range" id="bodyAngleXSlider" min="-180" max="180" step="1" value="25.836"/>
     Body Angle Y: <input type="range" id="bodyAngleYSlider" min="-180" max="180" step="1" value="170"/>
     Body Angle Z: <input type="range" id="bodyAngleZSlider" min="-180" max="180" step="1" value="59.5"/>
 
     <p></p>
-    Head Angle X: <input type="range" id="headSlider" min="135" max="225" step="0.1" value="180"/>
-    Head Angle Y: <input type="range" id="headYSlider" min="-25" max="19.2" step="0.1" value="19.2"/>
+    Head Angle X: <input type="range" id="headSlider" min="135" max="225" step="1" value="180"/>
+    Head Angle Y: <input type="range" id="headYSlider" min="-25" max="19.2" step="1" value="-2"/> -->
+    <p></p>
+    Wing Stretch: <input type="range" id="wingSlider" min="0" max="70" step="1" value="70"/>
+    Wing Pitch: <input type="range" id="wingFrontBackSlider" min="-50" max="50" step="1" value="0"/>
+    Wing Yaw: <input type="range" id="handXSlider" min="-60" max="0" step="1" value="-40"/>
+
+    <p></p>
     Top Beak Angle: <input type="range" id="topBeakSlider" min="0" max="15" step="1" value="0"/>
     Bottom Beak Angle: <input type="range" id="bottomBeakSlider" min="0" max="30" step="1" value="0"/>
+    Tail Spread: <input type="range" id="tailSlider" min="0" max="10" step="1" value="0"/>
 
     <p></p>
-    Wing Stretch: <input type="range" id="wingSlider" min="0" max="70" step="0.1" value="70"/>
-    Wing Pitch: <input type="range" id="wingFrontBackSlider" min="-50" max="50" step="0.1" value="0"/>
-    Wing Yaw: <input type="range" id="handXSlider" min="-60" max="0" step="0.1" value="-40"/>
+    Right Leg Angle X: <input type="range" id="rightLegXSlider" min="-110" max="-30" step="1" value="-90"/>
+    Right Leg Angle Y: <input type="range" id="rightLegYSlider" min="-3" max="-6" step="1" value="-3"/>
+    Right Shin Angle X: <input type="range" id="rightShinXSlider" min="-90" max="90" step="1" value="0"/>
+    Right Foot Angle: <input type="range" id="rightFootAngle" min="-50" max="50" step="1" value="0"/>
+    Right Toe Angle: <input type="range" id="rightToeSlider" min="-1.5" max="20" step="1" value="0"/>
 
     <p></p>
-    Tail Spread: <input type="range" id="tailSlider" min="0" max="10" step="0.1" value="0"/>
-
-    <p></p>
-    Right Leg Angle X: <input type="range" id="rightLegXSlider" min="-110" max="-30" step="0.1" value="-90"/>
-    Right Leg Angle Y: <input type="range" id="rightLegYSlider" min="-3" max="-6" step="0.1" value="-3"/>
-    Right Shin Angle X: <input type="range" id="rightShinXSlider" min="-90" max="90" step="0.1" value="0"/>
-    Right Foot Angle: <input type="range" id="rightFootAngle" min="-50" max="50" step="0.1" value="0"/>
-    Right Toe Angle: <input type="range" id="rightToeSlider" min="-1.5" max="20" step="0.1" value="0"/>
-
-    <p></p>
-    Left Leg Angle X: <input type="range" id="leftLegXSlider" min="-110" max="-30" step="0.1" value="-90"/>
-    Left Leg Angle Y: <input type="range" id="leftLegYSlider" min="3" max="6" step="0.1" value="3"/>
-    Left Shin Angle X: <input type="range" id="leftShinXSlider" min="-90" max="90" step="0.1" value="0"/>
-    Left Foot Angle: <input type="range" id="leftFootAngle" min="-50" max="50" step="0.1" value="0"/>
-    Left Toe Angle: <input type="range" id="leftToeSlider" min="-1.5" max="20" step="0.1" value="0"/>
-
-    <p></p>
-    Animation:
-    <input type="button" id="start" value="ON"/>
-    <input type="button" id="stop" value="OFF"/>
+    Left Leg Angle X: <input type="range" id="leftLegXSlider" min="-110" max="-30" step="1" value="-90"/>
+    Left Leg Angle Y: <input type="range" id="leftLegYSlider" min="3" max="6" step="1" value="3"/>
+    Left Shin Angle X: <input type="range" id="leftShinXSlider" min="-90" max="90" step="1" value="0"/>
+    Left Foot Angle: <input type="range" id="leftFootAngle" min="-50" max="50" step="1" value="0"/>
+    Left Toe Angle: <input type="range" id="leftToeSlider" min="-1.5" max="20" step="1" value="0"/>
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
@@ -77,5 +75,6 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="AnimationClips/FlyUpAnimClips.js"></script>
     <script src="AnimationClips/Turnaround.js"></script>
     <script src="AnimationClips/TurnaroundStart.js"></script>
+    <script src="AnimationClips/DefaultAnimClips.js"></script>
   </body>
 </html>
