flyup extended - flydown next

--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -17,6 +17,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <canvas id="webgl" style="padding: 0; margin: auto auto; align-self: center; display: block" width="1920" height="800">
     Please use a browser that supports "canvas"
     </canvas>
+    <div style="display: block; padding: 0; margin: 15px; align-self: center; background-color: white; height: 5px"></div>
 
     <p id="output"></p>
     <p></p>
