--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -72,10 +72,12 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="Cube.js"></script>
     <script src="Area.js"></script>
     <script src="Vulture.js"></script>
+    <script src="Bone.js"></script>
     <script src="AnimationClips/FlyDownAnimClips.js"></script>
     <script src="AnimationClips/FlyUpAnimClips.js"></script>
     <script src="AnimationClips/Turnaround.js"></script>
     <script src="AnimationClips/TurnaroundStart.js"></script>
     <script src="AnimationClips/DefaultAnimClips.js"></script>
+    <script src="AnimationClips/BoneAnimClips.js"></script>
   </body>
 </html>
