--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -46,7 +46,6 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Wing Yaw: <input type="range" id="handXSlider" min="-60" max="0" step="1" value="-40"/>
 
     <p></p>
-    Top Beak Angle: <input type="range" id="topBeakSlider" min="0" max="15" step="1" value="0"/>
     Bottom Beak Angle: <input type="range" id="bottomBeakSlider" min="0" max="30" step="1" value="0"/>
     Tail Spread: <input type="range" id="tailSlider" min="0" max="10" step="1" value="0"/>
 
@@ -76,11 +75,16 @@ my submission's special features are notes in the <p> tags below the canvas. I h
 
     <p></p>
     Bearded vultures are one of the coolest birds in the animal kingdom.
-
+    <br>
+    <br>
     I studied bird anatomy, watched countless videos, just to make sure I got everything as physically accurate to a real vulture.
+    <br>
     <br>
     I setup a keyframing/animation system for the bird, allowing me to create animation clips and string them together into complete animation sequences.
     <br>
+    <img src="bird.png" width="350">
+    <img src="bird2.jpg" width="350">
+    <img src="bird3.jpg" width="350">
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
