--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -42,7 +42,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
 
     <p></p>
     Wing Stretch: <input type="range" id="wingSlider" min="0" max="70" step="1" value="70"/>
-    Wing Pitch: <input type="range" id="wingFrontBackSlider" min="-50" max="50" step="1" value="0"/>
+    Wing Roll: <input type="range" id="wingFrontBackSlider" min="-50" max="50" step="1" value="0"/>
     Wing Yaw: <input type="range" id="handXSlider" min="-60" max="0" step="1" value="-40"/>
 
     <p></p>
@@ -50,18 +50,18 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Tail Spread: <input type="range" id="tailSlider" min="0" max="10" step="1" value="0"/>
 
     <p></p>
-    Right Leg Angle X: <input type="range" id="rightLegXSlider" min="-110" max="-30" step="1" value="-90"/>
-    Right Leg Angle Y: <input type="range" id="rightLegYSlider" min="-3" max="-6" step="1" value="-3"/>
-    Right Shin Angle X: <input type="range" id="rightShinXSlider" min="-90" max="90" step="1" value="0"/>
-    Right Foot Angle: <input type="range" id="rightFootAngle" min="-50" max="50" step="1" value="0"/>
-    Right Toe Angle: <input type="range" id="rightToeSlider" min="-1.5" max="20" step="1" value="0"/>
+    Left Leg Angle X: <input type="range" id="rightLegXSlider" min="-110" max="-30" step="1" value="-90"/>
+    <!-- Right Leg Angle Y: <input type="range" id="rightLegYSlider" min="-3" max="-6" step="1" value="-3"/> -->
+    Left Shin Angle X: <input type="range" id="rightShinXSlider" min="-90" max="90" step="1" value="0"/>
+    Left Foot Angle: <input type="range" id="rightFootAngle" min="-50" max="50" step="1" value="0"/>
+    Left Toe Angle: <input type="range" id="rightToeSlider" min="-1.5" max="20" step="1" value="0"/>
 
     <p></p>
-    Left Leg Angle X: <input type="range" id="leftLegXSlider" min="-110" max="-30" step="1" value="-90"/>
-    Left Leg Angle Y: <input type="range" id="leftLegYSlider" min="3" max="6" step="1" value="3"/>
-    Left Shin Angle X: <input type="range" id="leftShinXSlider" min="-90" max="90" step="1" value="0"/>
-    Left Foot Angle: <input type="range" id="leftFootAngle" min="-50" max="50" step="1" value="0"/>
-    Left Toe Angle: <input type="range" id="leftToeSlider" min="-1.5" max="20" step="1" value="0"/>
+    Right Leg Angle X: <input type="range" id="leftLegXSlider" min="-110" max="-30" step="1" value="-90"/>
+    <!-- Left Leg Angle Y: <input type="range" id="leftLegYSlider" min="3" max="6" step="1" value="3"/> -->
+    Right Shin Angle X: <input type="range" id="leftShinXSlider" min="-90" max="90" step="1" value="0"/>
+    Right Foot Angle: <input type="range" id="leftFootAngle" min="-50" max="50" step="1" value="0"/>
+    Right Toe Angle: <input type="range" id="leftToeSlider" min="-1.5" max="20" step="1" value="0"/>
 
     <p></p>
     NOTES FOR GRADER:
