--- a/asgn2/asg2.html
+++ b/asgn2/asg2.html
@@ -67,7 +67,8 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     NOTES FOR GRADER:
     <br>
     <li>Every part of the bird is animated, and the wing motion is anatomically correct</li>
-    <li>The meat on the bone is made up of non-cube primitives. Three icospheres and a cylinder.</li>
+    <li>The meat on the bone is made up of non-cube primitives. Three icospheres and a cylinder</li>
+    <li>The furthest joint of the wings and the feet are third-level joints</li>
     <br>
     <li>Shift Click: Feed the vulture. Only works when on the ground. The bearded vulture's diet consists of 80% bones</li>
     <li>Right Click: Fly up to a tall pillar. Fly back down, as well</li>
