--- a/asgn3/World.html
+++ b/asgn3/World.html
@@ -14,7 +14,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
   </head>
 
   <body onload="main()">
-    <canvas id="webgl" width="800" height="800">
+    <canvas id="webgl" width="1920" height="800">
     Please use a browser that supports "canvas"
     </canvas>
     <p id="output"></p>
@@ -26,6 +26,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="World.js"></script>
     <script src="Cube.js"></script>
     <script src="Map.js"></script>
+    <script src="OBJLOADER.js"></script>
     <script src="Camera.js"></script>
   </body>
 </html>
