--- a/asgn3/World.html
+++ b/asgn3/World.html
@@ -13,8 +13,8 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <title>Draw quad with multiple textures</title>
   </head>
 
-  <body onload="main()">
-    <canvas id="webgl" width="1920" height="800">
+  <body onload="main()" style="background-color: black;">
+    <canvas id="webgl">
     Please use a browser that supports "canvas"
     </canvas>
     <p id="output"></p>
