--- a/asgn3/World.html
+++ b/asgn3/World.html
@@ -17,7 +17,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <canvas id="webgl">
     Please use a browser that supports "canvas"
     </canvas>
-    <p id="output"></p>
+    <p id="output"style="color: white"></p>
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
