--- a/asgn3/World.html
+++ b/asgn3/World.html
@@ -10,7 +10,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Draw quad with multiple textures</title>
+    <title>Achievement</title>
   </head>
 
   <body onload="main()" style="background-color: black;">
