--- a/asgn3/asg3.html
+++ b/asgn3/asg3.html
@@ -18,16 +18,13 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Please use a browser that supports "canvas"
     </canvas>
     <br>
-    <br>
-    // WILLINGNESS OF INTERACTION ACKNOWLEDGES AN OBLIGATION OF JUDGEMENT, JUDICIATED BY EXPECTATION FAR BEYOND OUR ABILITY.
-    <br>
+    <p style="display: block; padding: 6px; margin: auto; text-align: center;">// WILLINGNESS OF INTERACTION ACKNOWLEDGES AN OBLIGATION OF JUDGEMENT, JUDICIATED BY EXPECTATION FAR BEYOND OUR ABILITY.</p>
     <br>
     <br>
-    // YOUR TURN.
+    <p style="display: block; padding: auto; margin: auto; text-align: center;">// YOUR TURN.</p>
     <br>
     <br>
-    <br>
-    // ACHIEVE.
+    <p style="display: block; padding: auto; margin: auto; text-align: center;">// ACHIEVE.</p>
     <br>
     <br>
     <br>
