--- a/BLOCKYEXISTENCE/asg3.html
+++ b/BLOCKYEXISTENCE/asg3.html
@@ -18,7 +18,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Please use a browser that supports "canvas"
     </canvas>
     <br>
-    <p style="display: block; padding: 6px; margin: auto; text-align: center;">WILLINGNESS TO INTERACT ACKNOWLEDGES A BURDEN OF JUDGEMENT, FRAMED BY EXPECTATION FAR BEYOND OUR ABILITY.</p>
+    <p style="display: block; padding: 6px; margin: auto; text-align: center;">THE DRIVE TO WORK ACKNOWLEDGES A BURDEN OF JUDGEMENT, FRAMED BY EXPECTATION FAR BEYOND OUR ABILITY.</p>
     <br>
     <br>
     <p style="display: block; padding: auto; margin: auto; text-align: center;">YOUR TURN.</p>
@@ -42,7 +42,8 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     RUBRIC - wow:
     <li>Wrote my own obj loader, for objects like the eye, the wire, and the plug (also loads uv coordinates)</li>
     <li>Learned about cubemaps for a seemingly infinite skybox</li>
-    <li>Shader effects, including basic N-Dot-L lighting, time-based coloring, and posterization</li>
+    <li>Shader effects, including basic N-Dot-L lighting, time-based coloring, posterization, and vignette</li>
+    <li>Bloom - using framebuffers and multiple passes</li>
     <li>P.S. the eye is always looking at you</li>
     <br>
     <br>
