comments done, time to stop working

--- a/BLOCKYEXISTENCE/asg3.html
+++ b/BLOCKYEXISTENCE/asg3.html
@@ -43,7 +43,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <li>Wrote my own obj loader, for objects like the eye, the wire, and the plug (also loads uv coordinates)</li>
     <li>Learned about cubemaps for a seemingly infinite skybox</li>
     <li>Shader effects, including basic N-Dot-L lighting, time-based coloring, posterization, and vignette</li>
-    <li>Bloom - using framebuffers and multiple passes</li>
+    <li>Bloom - using texture framebuffers and multiple passes</li>
     <li>P.S. the eye is always looking at you</li>
     <br>
     <br>
@@ -78,6 +78,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     <script src="FrameBufferWrapper.js"></script>
     <script src="ToneMapping.js"></script>
     <script src="Camera.js"></script>
+    <script src="Shaders.js"></script>
   </body>
 </html>
 
