--- a/BLOCKYEXISTENCE/asg3.html
+++ b/BLOCKYEXISTENCE/asg3.html
@@ -18,7 +18,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     Please use a browser that supports "canvas"
     </canvas>
     <br>
-    <p style="display: block; padding: 6px; margin: auto; text-align: center;">THE DRIVE TO WORK ACKNOWLEDGES A BURDEN OF JUDGEMENT, FRAMED BY EXPECTATION FAR BEYOND OUR ABILITY.</p>
+    <p style="display: block; padding: 6px; margin: auto; text-align: center;">STRIVING FOR ACHIEVEMENT ACKNOWLEDGES A BURDEN OF JUDGEMENT, FRAMED BY EXPECTATION FAR BEYOND OUR ABILITY.</p>
     <br>
     <br>
     <p style="display: block; padding: auto; margin: auto; text-align: center;">YOUR TURN.</p>
