--- a/BLOCKYEXISTENCE/asg3.html
+++ b/BLOCKYEXISTENCE/asg3.html
@@ -42,7 +42,7 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     RUBRIC - wow:
     <li>Wrote my own obj loader, for objects like the eye, the wire, and the plug (also loads uv coordinates)</li>
     <li>Learned about cubemaps for a seemingly infinite skybox</li>
-    <li>Shader effects, including basic N-Dot-L lighting, time-based coloring, posterization, and vignette</li>
+    <li>Shader effects, including basic N-Dot-L lighting, time-based coloring, posterization, chromatic aberration, and vignette</li>
     <li>Bloom - using texture framebuffers and multiple passes</li>
     <li>P.S. the eye is always looking at you</li>
     <br>
