lighting assignment done

--- a/asgn4/asg4.html
+++ b/asgn4/asg4.html
@@ -41,6 +41,31 @@ my submission's special features are notes in the <p> tags below the canvas. I h
     X: <input type="range" id="pointX" min="-50" max="50" step="1" value="0"/>
     Y: <input type="range" id="pointY" min="-50" max="50" step="1" value="20"/>
     Z: <input type="range" id="pointZ" min="-50" max="50" step="1" value="0"/>
+    <br>
+    <br>
+    Spot Light Color:
+    <br>
+    R: <input type="range" id="spotRed" min="0" max="255" step="1" value="255"/>
+    G: <input type="range" id="spotGreen" min="0" max="255" step="1" value="255"/>
+    B: <input type="range" id="spotBlue" min="0" max="255" step="1" value="255"/>
+    <br>
+    <br>
+    Spot Light Position:
+    <br>
+    X: <input type="range" id="spotX" min="-50" max="50" step="0.1" value="-35"/>
+    Y: <input type="range" id="spotY" min="-50" max="50" step="0.1" value="30"/>
+    Z: <input type="range" id="spotZ" min="-50" max="50" step="0.1" value="0"/>
+    <br>
+    Spot Light Direction:
+    <br>
+    X: <input type="range" id="spotDX" min="-50" max="50" step="0.1" value="-35"/>
+    Y: <input type="range" id="spotDY" min="-50" max="50" step="0.1" value="20"/>
+    Z: <input type="range" id="spotDZ" min="-50" max="50" step="0.1" value="0"/>
+    <br>
+    <br>
+    Spot Light Radius:
+    <input type="range" id="spotRad" min="0.0" max="1.0" step="0.001" value="0.9"/>
+
 
     <br>
     <br>
